# Vison

./: README.md
src/: brain.tar.xz  solver.tar.xz
src/application/: CMakeLists.txt
src/application/src/: cubot_armor_distance_compensator.cpp  cubot_armor_image_extractor.cpp  cubot_armor_negative_generator.cpp  cubot_armor_svm_trainer.cpp  cubot_armor_threshold_estimator.cpp  cubot_brain.cpp  cubot_camera_calibrator.cpp  cubot_distance_polynomial_estimator.cpp  cubot_fan_distance_compensator.cpp  cubot_fan_palstance_estimator.cpp  cubot_fan_template_extractor.cpp  cubot_fan_threshold_estimator.cpp  cubot_hsv_threshold_estimator.cpp  cubot_logo_image_extractor.cpp  cubot_logo_negative_generator.cpp  cubot_logo_svm_trainer.cpp  cubot_logo_threshold_estimator.cpp  cubot_video_converter.cpp  cubot_video_recorder.cpp  cubot_windmill_contours_estimator.cpp  cubot_windmill_hsv_threshold_estimator.cpp
src/armor/: CMakeLists.txt
src/armor/include/: classical_armor.h  classical_armor_recognizer.h  classical_armor_recognizer_param.h  classical_light_bar.h
src/armor/src/: classical_armor.cpp  classical_armor_evaluation_weight.cpp  classical_armor_recognizer.cpp  classical_armor_recognizer_param.cpp  classical_light_bar.cpp
src/armor/test/: test_classical_armor_recognizer_param.cpp  test_classical_detect_light_bar_pairs.cpp  test_classical_detect_polished_armors.cpp  test_classical_detect_polished_light_bars.cpp  test_classical_detect_raw_armors.cpp  test_classical_detect_raw_light_bars.cpp  test_classical_evaluate_polished_armors.cpp  test_classical_preprocess_armor_image.cpp
src/brain/: CMakeLists.txt
src/brain/include/: robot_body_request.h  robot_brain.h  robot_brain_control_command.h  robot_brain_core.h  robot_brain_core_param.h  robot_brain_core_statistics.h  robot_brain_notify_command.h  robot_brain_param.h  robot_buff_data.h  robot_fight_data.h
src/brain/src/: robot_body_request.cpp  robot_brain.cpp  robot_brain_control_command.cpp  robot_brain_core.cpp  robot_brain_core_param.cpp  robot_brain_core_statistics.cpp  robot_brain_notify_command.cpp  robot_brain_param.cpp  robot_buff_data.cpp  robot_fight_data.cpp
src/brain/test/: test_robot_body_request.cpp  test_robot_brain_control_command.cpp  test_robot_brain_notify_command.cpp  test_robot_brain_param.cpp
src/camera/: CMakeLists.txt
src/camera/include/: huaray_camera.h  huaray_camera_data.h  huaray_camera_hardware_param.h  huaray_camera_model_param.h  huaray_camera_runtime_param.h  huaray_camera_status.h
src/camera/src/: huaray_camera.cpp  huaray_camera_data.cpp  huaray_camera_hardware_param.cpp  huaray_camera_model_param.cpp  huaray_camera_param.cpp  huaray_camera_runtime_param.cpp  huaray_camera_status.cpp
src/camera/test/: test_huaray_camera_offline.cpp  test_huaray_camera_online_1.cpp  test_huaray_camera_online_2.cpp  test_huaray_camera_param.cpp  test_huaray_camera_reconnect.cpp  test_huaray_camera_switch_hardware_param.cpp
src/common/: CMakeLists.txt
src/common/include/: delta_cv.h  keyboard_scanner.h  shared_memory.h  shared_memory_param.h
src/common/src/: bgr_weight.cpp  delta_cv.cpp  hsv_threshold.cpp  keyboard_scanner.cpp  shared_memory.cpp  shared_memory_param.cpp
src/common/test/: test_delta_cv.cpp  test_delta_cv_binarize_image.cpp  test_shared_memory_publish.cpp  test_shared_memory_subscribe.cpp  test_simd_instruction.cpp
src/demo/: CMakeLists.txt
src/demo/src/: automatic_shoot_armor_demo.cpp  compensate_armor_velocity_demo.cpp  compensate_large_buff_velocity_demo.cpp  compensate_small_buff_velocity_demo.cpp  exchange_data_demo.cpp  issue_control_command.cpp  issue_notify_command.cpp  shoot_base_demo.cpp  shoot_ground_robot_demo_1.cpp  shoot_ground_robot_demo_2.cpp  shoot_large_buff_demo.cpp  shoot_outpost_demo.cpp  shoot_sentry_demo.cpp  shoot_small_buff_demo.cpp
src/solver/: CMakeLists.txt
src/solver/include/: angle_distance_offset_param.h  armor_distance_offset.h  armor_distance_param.h  armor_velocity_param.h  buff_distance_offset.h  buff_distance_param.h  large_buff_velocity_param.h  predictor.h  predictor_AntiTop.h  predictor_EKF.h  predictor_KF.h  predictor_command.h  predictor_model.h  predictor_param.h  predictor_tool.h  small_buff_velocity_param.h  solver.h  solver_param.h
src/solver/src/: angle_distance_offset_param.cpp  armor_distance_offset.cpp  armor_distance_param.cpp  armor_velocity_param.cpp  buff_distance_offset.cpp  buff_distance_param.cpp  large_buff_velocity_param.cpp  predictor.cpp  predictor_AntiTop.cpp  predictor_EKF.cpp  predictor_KF.cpp  predictor_command.cpp  predictor_model.cpp  predictor_param.cpp  predictor_tool.cpp  small_buff_velocity_param.cpp  solver.cpp  solver_param.cpp
src/solver/test/: test_ceres_fit_curve.cpp  test_ceres_optimization.cpp  test_compute_vector_angle.cpp  test_eigen_rotate_vector.cpp  test_ekf.cpp  test_package.cpp  test_predictor_antitop.cpp  test_predictor_autoaim_ekf.cpp  test_predictor_commond.cpp  test_predictor_model.cpp  test_predictor_param.cpp  test_predictor_tool.cpp  test_predictor_yaw.cpp  test_solver_compensate_distance.cpp  test_solver_fit_polynomial.cpp  test_solver_fit_sine.cpp  test_solver_fit_sine_integral.cpp  test_solver_param.cpp
src/uart/: CMakeLists.txt
src/uart/include/: serial_port.h  serial_port_param.h
src/uart/src/: serial_port.cpp  serial_port_param.cpp
src/uart/test/: test_search_ttyusb.cpp  test_serial_port.cpp  test_serial_port_param.cpp
src/windmill/: CMakeLists.txt
src/windmill/include/: classcal_windmill_cerese_predictor.h  classical_windmill_logo.h
src/yolo/: CMakeLists.txt
src/yolo/include/: classical_armor.h  classical_armor_evaluation_weight.h  classical_armor_recognizer.h  classical_armor_recognizer_param.h  classical_armor_solver.h  postprocess.h  preprocess.h  types.h
src/yolo/src/: CNN_18x28_7.30_1.onnx  calibrator.cpp  classical_armor.cpp  classical_armor_recognizer.cpp  classical_armor_recognizer_param.cpp  classical_armor_solver.cpp  postprocess.cu  preprocess.cu
src/yolo/test/: test_classical_armors_yolo.cpp  test_classical_evaluate_polished_armors.cpp
(+4 files in other folders)
